# tideperfect

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: mod.rs  player.rs  stream.rs  track.rs
src-tauri/src/commands/: album.rs  auth.rs  mod.rs  playback.rs  track.rs
src-tauri/src/models/: mod.rs  playback.rs  queue.rs  track.rs
src-tauri/src/utils/: persistence.rs
src/album/: Album.tsx
src/components/album/: Album.tsx
src/home/: Home.tsx
src/home/components/: AlbumCard.tsx  DevicePicker.tsx  Player.tsx  QualityBadge.tsx  Queue.tsx  QueueItem.tsx  SongCard.tsx
src/login/: Login.tsx
src/login/components/: LoginCard.tsx
tauri/: alsa.conf  package-lock.json  package.json
tauri/src/: App.tsx  Layout.tsx  bindings.ts
tauri/src-bak/: App.tsx  style.css
tauri/src-bak/home/: Home.tsx
tauri/src-bak/home/components/: AlbumCard.tsx  Lyrics.tsx  PlaylistCard.tsx  QualityBadge.tsx
tauri/src-bak/login/components/: LoginCard.tsx
tauri/src-bak/playlist/: Playlist.tsx
tauri/src-tauri/: Cargo.toml
tauri/src-tauri/src/: album.rs  auth.rs  error.rs  lib.rs  main.rs  player.rs  queue.rs  track.rs
tauri/src-tauri/src/dtos/: album.rs  device.rs  mod.rs  playlist.rs  track.rs
tauri/src/components/: AuthModal.tsx
tauri/src/home/: Home.tsx
tauri/src/home/components/: AlbumCard.tsx  DevicePicker.tsx  Player.tsx  Queue.tsx  QueueItem.tsx  SongCard.tsx
tauri/src/lib/: result.ts
tauri/src/routes/: Home.tsx
tideperfect/: Cargo.toml
tideperfect/src/: lib.rs
tideperfect/src/audio/: mod.rs  player.rs  queue.rs  stream.rs  track.rs
tideperfect/src/services/: album.rs  auth.rs  mod.rs  player.rs  queue.rs  track.rs
tideperfect/src/utils/: persistence.rs
