[package]
name = "tideperfect"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tideperfect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tidalrs = { path = "../../tidalrs" }
dotenvy = "0.15"
dotenvy_macro = "0.15"
anyhow = "1.0.100"
open = "5.3.3"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dash-mpd = "0.19.1"
base64 = "0.22.1"
reqwest = "0.12.26"
symphonia = { version = "0.5.5", features = ["isomp4", "flac"] }
bytes = "1.11.0"
cpal = "0.16.0"
thiserror = "2.0.17"
ringbuf = "0.4.8"
tokio = "1.48.0"
stream-download = "0.22.9"
url = "2.5"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
tauri-plugin-devtools = { version = "2.0.0", optional = true }

[features]
default = []
devtools = ["dep:tauri-plugin-devtools"]

