[package]
name = "tideperfect"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tidalrs = { path = "../../tidalrs" }
dotenvy = "0.15"
dotenvy_macro = "0.15"
open = "5.3.3"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dash-mpd = "0.19.1"
base64 = "0.22.1"
reqwest = "0.12.26"
symphonia = { version = "0.5.5", features = ["isomp4", "flac"] }
bytes = "1.11.0"
#cpal = "0.17.0"
cpal = { git = "https://github.com/RustAudio/cpal.git", branch = "fix/alsa-card-enumeration" }
ringbuf = "0.4.8"
tokio = { version = "1.48.0", features = ["full"] }
stream-download = "0.22.9"
url = "2.5"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
snafu = "0.8.9"

